Add: Added auth validations (joi)
