# src/routes/userRoutes.js
@@ -12,12 +12,18 @@ const {
 const { protect } = require("../middlewares/auth");
 const upload = require("../middlewares/upload");
 
+const {
+  registerSchema,
+  loginSchema,
+} = require("../validations/auth.validation");
+const validateRequest = require("../middlewares/validateRequest");
+
 const userRouter = express.Router();
 
-userRouter.post("/register", register);
-userRouter.post("/login", login);
+userRouter.post("/register", validateRequest(registerSchema), register);
+userRouter.post("/login", validateRequest(loginSchema), login);
 
-userRouter.get("/profile", protect, getUserProfile)
+userRouter.get("/profile", protect, getUserProfile);
 
 userRouter.put(
   "/profile",
@@ -27,7 +33,7 @@ userRouter.put(
 );
 
 userRouter.put("/like-song/:id", protect, toggleLikeSong);
-userRouter.put("/like-album/:id", protect, toggleLikeAlbum);//left to test
+userRouter.put("/like-album/:id", protect, toggleLikeAlbum); //left to test
 userRouter.put("/follow-artist/:id", protect, toggleFollowArtist);
 
 userRouter.put("/follow-playlist/:id", protect, toggleFollowPlaylist); //left to test
